# picoDOS

./: Makefile  README.md
Applications/fib/: Makefile  memmap_app.ld
Kernel/: CMakeLists.txt  memmap_kernel.ld
Kernel/src/: main.c
